# dex-solana

./: .gitignore  CLAUDE.md  PROMPT.md  README.md  validate_idl.js  validate_structure.sh
.playwright-mcp/: page-2026-04-13T17-09-36-060Z.yml  page-2026-04-13T17-09-42-073Z.yml
dex/script/: Deploy.s.sol
dex/src/: DEX.sol  ERC20.sol  TokenA.sol  TokenB.sol
dex/test/: DEX.t.sol
docs/migration-plans/solana-anchor/phase-1/: Anchor.toml  Cargo.toml  package.json
solana-dex/: Anchor.toml  SURFPOOL_MIGRATION_SUMMARY.md  package-lock.json  package.json  run-tests.sh  test-specific.sh  txtx.yml
solana-dex/programs/solana-dex/: Cargo.toml
solana-dex/runbooks/: DEPLOYMENT_GUIDE.md  README.md  SURFPOOL_DEPLOYMENT_GUIDE.md  SURFPOOL_INTEGRATION.md  build-deploy.sh  consistency-check.sh  deploy-surfpool.sh  deploy-with-surfpool.sh  deployment-runbook.md  example-env-config.sh  find-program-id.sh  fix-program-id-mismatch.sh  full-deploy.sh  surfpool-config.yml  surfpool-deploy.yaml
solana-dex/tests/: security-tests.ts  solana-dex.ts
web/: README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/components/: Header.tsx  LiquidityCard.tsx  PoolStats.tsx  SwapCard.tsx  SwapCard.tsx.bak  WalletConnectModal.tsx
web/e2e/: solana-dex-test.ts
web/lib/: agnostic-wallet-context.tsx  contracts.ts  dex-service.ts  solana-dex-types.ts  solana-wallet-context.tsx  utils.ts  wagmi-config.ts  wallet-adapter-config.tsx  wallet-adapter-config.tsx.bak  wallet-context.tsx  wallet-utils.tsx
web/providers/: AgnosticWalletProvider.tsx
(+35 files in other folders)
