[toolchain]

[workspace]
members = [
    "programs/*",
    "tests/*",
]

resolver = "2"

[profile.release]
overflow-checks = true
lto = true
opt-level = 3
codegen-units = 1
incremental = false
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 0
incremental = false
codegen-units = 1
